# allauth-js

./: .gitignore  .pre-commit-config.yaml  README.md  biome.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.base.json  tsconfig.build.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  publish.yml  release.yml
.storybook/: main.ts  preview.ts  tailwind.css
.storybook/__mocks__/: next-link.tsx
examples/backend/: .env.example  README.md  db.sqlite3  pyproject.toml  setup.sh
examples/backend/app/: __init__.py  asgi.py  settings.py  wsgi.py
examples/backend/config/: asgi.py  settings.py  urls.py  wsgi.py
examples/nextjs/: README.md  package.json  pnpm-lock.yaml
examples/nextjs-example/: biome.json  next.config.ts  package.json  pnpm-lock.yaml
examples/nextjs-example/src/hooks/: useTheme.ts
examples/nextjs-example/src/pages/: _app.tsx  _document.tsx  (+1 more)
src/: index.ts  tailwind-preset.js
src/allauth/: AuthContext.tsx  index.ts  routing.tsx  tracking.tsx
src/allauth/containers/: emails.tsx  providers.tsx  sessions.tsx
src/allauth/hooks/: index.ts  useSetErrors.tsx
src/allauth/lib/: allauth.ts  django.ts
src/core/: allauth.ts  constants.ts  csrf.ts  index.ts  types.ts  urls.ts
src/nextjs/: index.ts  routing.tsx
src/react/: AuthContext.tsx  index.ts
src/react/hooks/: index.ts  useAuth.ts  useAuthChange.ts  useAuthStatus.ts  useConfig.ts  useEmails.tsx  useProviders.tsx  useSessions.tsx  useSetErrors.tsx  useUser.ts
src/styles/: index.css  index.ts
src/tracking/: index.ts
src/types/: material-ripple-effects.d.ts
(+67 files in other folders)
